--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,14 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - local_runners
   pull_request:
 
 jobs:
   ruby-ci:
     strategy:
       matrix:
-        runs-on: [ubicloud, ubicloud-arm]
+        runs-on: [ubicloud]
     continue-on-error: true
     name: Ruby CI - ${{matrix.runs-on}}
     runs-on: ${{matrix.runs-on}}
@@ -39,61 +39,3 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v4
-
-    - name: Cache ruby for ARM runners
-      id: cache-ruby
-      if: matrix.runs-on == 'ubicloud-arm'
-      uses: actions/cache@v4
-      with:
-        path: /opt/hostedtoolcache/Ruby
-        key: ${{ matrix.runs-on }}-ruby-${{ hashFiles('.tool-versions') }}
-
-    - name: Install ruby for ARM runners if not cached
-      if: matrix.runs-on == 'ubicloud-arm' && steps.cache-ruby.outputs.cache-hit != 'true'
-      run: |
-        git clone https://github.com/rbenv/ruby-build.git
-        sudo ./ruby-build/install.sh
-        RUBY_VERSION="$(grep -E '^ruby ' .tool-versions | cut -d' ' -f2)"
-        sudo ruby-build "$RUBY_VERSION" /opt/hostedtoolcache/Ruby/$RUBY_VERSION/arm64
-        sudo chown -R runner:runner /opt/hostedtoolcache/Ruby
-        touch /opt/hostedtoolcache/Ruby/$RUBY_VERSION/arm64.complete
-        rm -rf ruby-build
-
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: .tool-versions
-        bundler-cache: true
-
-    - name: Run erb-formatter
-      run: |
-        bundle exec rake linter:erb_formatter
-        git diff --exit-code
-
-    - name: Run rubocop
-      run: bundle exec rake linter:rubocop
-
-    - name: Run brakeman
-      run: bundle exec rake linter:brakeman
-
-    - name: Apply migrations
-      env:
-        CLOVER_DATABASE_URL: postgres://${{ env.DB_USER }}:${{ env.DB_PASSWORD }}@localhost:5432/${{ env.DB_NAME }}
-      run: bundle exec rake test_up
-
-    - name: Run controlplane tests
-      env:
-        CLOVER_DATABASE_URL: postgres://${{ env.DB_USER }}:${{ env.DB_PASSWORD }}@localhost:5432/${{ env.DB_NAME }}
-        CLOVER_SESSION_SECRET: kbaf1V3biZ+R2QqFahgDLB5/lSomwxQusA4PwROUkFS1srn0xM/I47IdLW7HjbQoxWri6/aVgtkqTLFiP65h9g==
-        CLOVER_COLUMN_ENCRYPTION_KEY: TtlY0+hd4lvedPkNbu5qsj5H7giPKJSRX9KDBrvid7c=
-      run: COVERAGE=1 bundle exec rspec
-
-    - name: Run dataplane tests
-      run: bundle exec rspec -O /dev/null rhizome
-
-    - name: Archive code coverage results
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: code-coverage-report
-        path: coverage/
