--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Deploy dev ssh keys
       run: |
-        sudo sh -c 'cat "ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBF8s1PMJQfyKMrbi408/aFNXt1Ey14NIftFOtDtm2qo4JXU0dOEA5s7D8ADlskroMXtLQyPJjePHDn1OCNE/A8c= dev+ben@ubicloud.com" >> /home/runneradmin/.ssh/authorized_keys'
+        sudo sh -c 'echo "ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBF8s1PMJQfyKMrbi408/aFNXt1Ey14NIftFOtDtm2qo4JXU0dOEA5s7D8ADlskroMXtLQyPJjePHDn1OCNE/A8c= dev+ben@ubicloud.com" >> /home/runneradmin/.ssh/authorized_keys'
         sudo sh -c 'cat /home/runneradmin/.ssh/authorized_keys'
 
     - name: Sleep
