--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -17,6 +17,7 @@ on:
           - standard-4
           - standard-8
           - standard-16
+          - standard-32
       boot_image:
         type: choice
         description: Runner boot image
