--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -1,60 +1,146 @@
-name: Give Me A Runner
+name: Provision Runner
 
 on:
   workflow_dispatch:
     inputs:
-      lifespan_minutes:
-        description: Runner lifespan in minutes
+      count:
+        description: Runner count
         required: true
         type: number
-        default: 60
-      size:
+        default: 1
+      lifespan_minutes:
+        description: Runner lifespan in minutes. 0 for immediate termination
+        required: true
+        type: number
+        default: 0
+      label:
         type: choice
-        description: Runner size
-        default: standard-2
+        description: Label
+        default: ubicloud-standard-2
         options:
-          - standard-2
-          - standard-4
-          - standard-8
-          - standard-16
-          - standard-32
-      boot_image:
-        type: choice
-        description: Runner boot image
-        default: ubuntu-2204
-        options:
-          - ubuntu-2204
-          - ubuntu-2004
-
-      arch:
-        type: choice
-        description: Runner architecture
-        default: x64
-        options:
-          - x64
-          - arm64
+          - ubicloud-standard-2
+          - ubicloud-standard-4
+          - ubicloud-standard-8
+          - ubicloud-standard-16
+          - ubicloud-standard-32
+          - ubicloud-standard-2-arm
+          - ubicloud-standard-4-arm
+          - ubicloud-standard-8-arm
+          - ubicloud-standard-16-arm
+          - ubicloud-standard-32-arm
+          - ubicloud-gpu-standard-1-latest
+          - ubicloud-standard-2-ubuntu-2004
+          - ubicloud-standard-4-ubuntu-2004
+          - ubicloud-standard-8-ubuntu-2004
+          - ubicloud-standard-16-ubuntu-2004
+          - ubicloud-standard-32-ubuntu-2004
+          - ubicloud-standard-2-arm-ubuntu-2004
+          - ubicloud-standard-4-arm-ubuntu-2004
+          - ubicloud-standard-8-arm-ubuntu-2004
+          - ubicloud-standard-16-arm-ubuntu-2004
+          - ubicloud-standard-32-arm-ubuntu-2004
 
 jobs:
-  run:
-    runs-on: ubicloud-${{ inputs.size }}${{ inputs.arch == 'arm64' && '-arm' || '' }}-${{ inputs.boot_image }}
-
+  generate-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
+      - name: Set matrix
+        id: set-matrix
+        run: |
+          echo "matrix="$(echo [$(seq -s, 1 ${{ inputs.count }})])"" >> $GITHUB_OUTPUT
 
-    - name: IPv4 Address
-      run: curl -sL --ipv4 ifconfig.me
+  run:
+    name: runner ${{ matrix.index }}
+    needs: generate-matrix
+    runs-on: ${{ inputs.label }}
+    strategy:
+      matrix:
+        index: ${{fromJson(needs.generate-matrix.outputs.matrix)}}
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
 
-    - name: IPv6 Address
-      run: curl -sL --ipv6 ifconfig.me
+      - name: uname -mr
+        run: uname -mr
 
-    - name: Hostname
-      run: hostname -I
+      - name: lsb_release -a
+        run: lsb_release -a
 
-    - name: Deploy dev ssh keys
-      run: |
+      - name: printenv
+        run: printenv
+
+      - name: nvidia-smi
+        if: ${{ contains(inputs.label, 'gpu') }}
+        run: nvidia-smi
+
+      - name: IPv4 SSH Command
+        if: ${{ inputs.lifespan_minutes > 0 }}
+        run: |
+          IPv4=$(curl -sL --ipv4 ifconfig.me)
+          echo "ssh runneradmin@$IPv4"
+
+      - name: IPv6 SSH Command
+        if: ${{ inputs.lifespan_minutes > 0 }}
+        run: |
+          IPv6=$(curl -sL --ipv6 ifconfig.me)
+          echo "ssh runneradmin@$IPv6"
+
+      - name: Deploy dev ssh keys
+        if: ${{ inputs.lifespan_minutes > 0 }}
+        run: |
         sudo sh -c 'echo "ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBF8s1PMJQfyKMrbi408/aFNXt1Ey14NIftFOtDtm2qo4JXU0dOEA5s7D8ADlskroMXtLQyPJjePHDn1OCNE/A8c= dev+ben@ubicloud.com" >> /home/runneradmin/.ssh/authorized_keys'
         sudo sh -c 'cat /home/runneradmin/.ssh/authorized_keys'
 
-    - name: Sleep
-      run: sleep $((${{ inputs.lifespan_minutes }} * 60))
+      - name: Sleep
+        if: ${{ inputs.lifespan_minutes > 0 }}
+        run: sleep $((${{ inputs.lifespan_minutes }} * 60))
+
+  generate-summary:
+    runs-on: ubuntu-latest
+    needs: [generate-matrix, run]
+    permissions:
+      contents: read
+      actions: read
+    steps:
+      - uses: actions/github-script@v7
+        id: check-queue-time
+        with:
+          script: |
+            github
+              .paginate("GET /repos/{owner}/{repo}/actions/runs/{run_id}/attempts/{attempt_number}/jobs", {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: context.runId,
+                attempt_number: ${{ github.run_attempt }},
+              })
+              .then((jobs) => {
+                const runnerJobs = jobs.filter((job) => job.name.startsWith("runner"));
+                const queueTimes = [];
+                const runnerTable = [
+                  [{data: 'Job', header: true}, {data: 'Runner', header: true}, {data: 'Queue Time', header: true}],
+                  ...runnerJobs.map((job) => {
+                    const queueTime = (new Date(job.started_at) - new Date(job.created_at)) / 1000;
+                    queueTimes.push(queueTime);
+                    return [job.name, job.runner_name, `${queueTime} seconds`];
+                  }),
+                ];
+                const sortedQueueTimes = queueTimes.sort((a, b) => a - b);
+                const summaryTable = [
+                  ["Label", "${{ inputs.label }}"],
+                  ["Count", "${{ inputs.count }} runners"],
+                  ["Average", `${(sortedQueueTimes.reduce((a, b) => a + b, 0) / queueTimes.length).toFixed(2)} seconds`],
+                  ["Min", `${sortedQueueTimes[0]} seconds`],
+                  ["Max", `${sortedQueueTimes[sortedQueueTimes.length - 1]} seconds`],
+                  ["P50", `${sortedQueueTimes[Math.ceil(queueTimes.length * 0.5) - 1]} seconds`],
+                  ["P90", `${sortedQueueTimes[Math.ceil(queueTimes.length * 0.9) - 1]} seconds`],
+                  ["P99", `${sortedQueueTimes[Math.ceil(queueTimes.length * 0.99) - 1]} seconds`],
+                ];
+                core.summary
+                  .addHeading("Summary :bar_chart:")
+                  .addTable(summaryTable)
+                  .addHeading("Details :stopwatch:")
+                  .addTable(runnerTable)
+                  .write();
+              });
